feat(approvals): version ontology and json-ld context #NP-51744
